syntax = "proto3";

package authenticate;


service Authenticate {
    rpc Authenticate (ClientCredentialRequest) returns (AuthenticateResponse) {};
}

message ClientCredentialRequest {
    string clientId = 1;
    string clientSecret = 2;
}


message AuthenticateResponse {
    string bearerToken = 1;
}